# CloneEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  build.bat  imgui.ini
_scripts/: global.sh
assets/car/: Car_Body.fbx  Car_Tire.fbx
assets/maps/modular/: modular.mtl
assets/save/: demo1.lvl  demo2.lvl  demoPhys.lvl  demoPhysFell.lvl
cmake/: FindASSIMP.cmake
config/: Test.txt  autre.txt
core/: CMakeLists.txt
core/CMake/: sources.cmake
core/sources/core/: Array.h  ArrayView.cpp  ArrayView.doc.h  CLog.cpp  CLog.doc.h  CLog.h  Constant.h  Delegate.h  File.cpp  File.h  Flag.h  GameLoop.cpp  GameLoop.h  PoolAllocator.cpp  PoolAllocator.doc.h  PoolAllocator.h  PoolAllocator.inl  ResourceManager.cpp  ResourceManager.doc.h  ResourceManager.h  ResourceManager.inl  ThreadPool.cpp  ThreadPool.doc.h  ThreadPool.h  ThreadPool.inl  TimerManager.cpp  TimerManager.h
core/sources/core/DebugWindow/: BenchmarkValue.cpp  BenchmarkValue.h  DebugSection.cpp  (+5 more)
editor/: CMakeLists.txt
editor/CMake/: sources.cmake
editor/sources/editor/: SceneTemplate.cpp  SceneTemplate.h  main.cpp
editor/sources/editor/GameComponents/: BoulderComponent.cpp  BoulderComponent.h  CarChassisComponent.h  CarControllerComponent.cpp  CarControllerComponent.h  CarWheelComponent.h  CheckpointComponent.cpp  CheckpointComponent.h  HUDComponent.cpp  HUDComponent.h  PlatformComponent.cpp  PlatformComponent.h  PlatformSpawner.cpp  PlatformSpawner.h  RotationLimiterComponent.cpp  RotationLimiterComponent.h
editor/sources/editor/GameEntities/: Boulder.cpp  Boulder.h  Car.cpp  Car.h  Checkpoint.cpp  Checkpoint.h  Platform.cpp  Platform.h
math/: CMakeLists.txt
model/: CMakeLists.txt
model/CMake/: sources.cmake
model/sources/model/: Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  Vertex.h
physic/: CMakeLists.txt
physic/CMake/: sources.cmake
physic/sources/physic/: ErrorCallback.cpp  ErrorCallback.h  PhysicsInstance.cpp  PhysicsInstance.doc.h  PhysicsInstance.h  PhysicsManager.cpp  PhysicsManager.doc.h  PhysicsManager.h  PhysicsRigidActor.cpp  PhysicsRigidActor.doc.h  PhysicsRigidActor.h  PhysicsVehicle.cpp  PhysicsVehicle.h  SimulationEventCallback.cpp  SimulationEventCallback.h  VehicleSceneQuerry.cpp  VehicleSceneQuerry.h
physic/sources/physic/PhysicsShapeComponent/: PhysicsBoxComponent.cpp  PhysicsBoxComponent.h  PhysicsCapsuleComponent.cpp  PhysicsCapsuleComponent.h  PhysicsMeshComponent.cpp  PhysicsMeshComponent.h  PhysicsSphereComponent.cpp  PhysicsSphereComponent.h  PhysicsVehicleComponent.cpp  PhysicsVehicleComponent.h
render/: CMakeLists.txt
render/CMake/: sources.cmake
render/sources/glfw/: GLFWEncapsulation.cpp  GLFWEncapsulation.h
render/sources/imgui/: ConsoleLogs.cpp  ConsoleLogs.h  EditorUI.cpp  EditorUI.h  GameViewport.cpp  GameViewport.h  ImguiImpl.cpp  ImguiImpl.h  UI.cpp  UI.h  UIDebugBenchmarkValue.cpp  UIDebugBenchmarkValue.h  UIDebugSection.cpp  UIDebugSection.h  UIDebugWindow.cpp  UIDebugWindow.h  UIFont.cpp  UIFont.h  UIObject.cpp  UIObject.h  UITheme.cpp  UITheme.h
render/sources/render/: RenderInclude.cpp  RenderInclude.h  VulkanConstants.h  VulkanMacros.h  VulkanUtils.hpp
render/sources/render/Camera/: CameraComponent.cpp  CameraComponent.h  FreeCam.cpp  FreeCam.h
render/sources/render/EngineWindow/: EngineWindow.cpp  EngineWindow.h
render/sources/render/Image/: Image.cpp  Image.h
render/sources/render/Light/: LightComponent.cpp  LightComponent.h
render/sources/render/Material/: Material.cpp  Material.h
render/sources/render/RenderComponent/: ModelComponent.cpp  ModelComponent.h
render/sources/render/Shaders/: ShaderModule.cpp  ShaderModule.h
render/sources/render/TextureImage/: VulkanTextureImage.cpp  VulkanTextureImage.h
render/sources/render/Vertex/: PhysicsDebugVertex.h  Vertex.h
render/sources/render/VulkanBuffer/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
render/sources/render/VulkanCommandPool/: VulkanCommandPool.cpp  VulkanCommandPool.h
render/sources/render/VulkanDebugMessenger/: VulkanDebugMessenger.cpp  VulkanDebugMessenger.h
render/sources/render/VulkanDescriptor/: VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h
render/sources/render/VulkanDevice/: VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceList.cpp  VulkanDeviceList.h
render/sources/render/VulkanFramebuffer/: VulkanFramebuffer.cpp  VulkanFramebuffer.h
render/sources/render/VulkanGlfwApplication/: VulkanGlfwApplication.cpp  VulkanGlfwApplication.h
render/sources/render/VulkanInstance/: VulkanInstance.cpp  VulkanInstance.h
render/sources/render/VulkanPipeline/: VulkanPipeline.cpp  VulkanPipeline.h
render/sources/render/VulkanPushConstant/: VulkanPushConstant.h
render/sources/render/VulkanQueryPool/: VulkanQueryPool.cpp  VulkanQueryPool.h
render/sources/render/VulkanRHI/: VulkanRHI.cpp  VulkanRHI.h
render/sources/render/VulkanRenderPass/: VulkanRenderPass.cpp  VulkanRenderPass.h
render/sources/render/VulkanRenderer/: VulkanRenderer.cpp  VulkanRenderer.h
render/sources/render/VulkanSwapchain/: VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSwapchainFrame.cpp  VulkanSwapchainFrame.h
render/sources/render/VulkanTextureSampler/: VulkanTextureSampler.cpp  VulkanTextureSampler.h
render/sources/render/VulkanUniformBuffer/: VulkanLightBuffers.cpp  VulkanLightBuffers.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h
render/sources/shaders/: depth.vert  depthVert.spv  frag.spv  physicsDebug.frag  physicsDebug.vert  physicsDebugFrag.spv  physicsDebugVert.spv  shader.frag  shader.vert  skybox.vert  skyboxVert.spv  vert.spv
script/: CMakeLists.txt
script/CMake/: sources.cmake
script/sources/script/: ScriptComponent.cpp  ScriptComponent.h
sound/: CMakeLists.txt
sound/CMake/: sources.cmake
sound/sources/sound/: Sound2D.cpp  Sound2D.h  Sound3D.cpp  Sound3D.h  SoundManager.cpp  SoundManager.h  Test.cpp  Test.h
(+51 files in other folders)
